# aws-hello-world-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
