[package]
name = "aws-hello-world-rust"
version = "0.1.0"
edition = "2021"
authors = ["random-email@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
aws-sdk-s3 = "0.22.0"
lambda_runtime = "0.7.2"
log = "0.4.17"
serde = "1.0.152"
time = "0.3.17"
tokio = { version = "1.24.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }